Various fixes (see description)
-fix profile getting pushed down when the window was too small
-give more space for about us and our games to spread down
-make the page a bit taller to fit the space the pages now have

--- a/about/profiles/frame.css
+++ b/about/profiles/frame.css
@@ -5,7 +5,7 @@
 
 .frame {
     border-radius: 10px;
-    width: 49%;
+    width: calc(50% - 10px);
     height: 100%;
 }
 
